# gogdb

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
docker/: README.md  docker-compose.yaml
docker/gogdb/: Dockerfile
gogdb/application/: config.py
gogdb/tools/: cleanup.py
gogdb/updater/: gogtoken.py  updater.py
